# pool-2012

./: .gitignore  CMakeLists.txt  Makefile  README.md  cat.c  evalexpr.c  my_aff_alpha.c  my_aff_chiffre.c  my_aff_comb.c  my_aff_comb2.c  my_aff_combn.c  my_aff_revalpha.c  my_ctype.c  my_ctype.h  my_evil_str.c  my_factorielle_it.c  my_factorielle_rec.c  my_find_prim_sup.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isneg.c  my_power_it.c  my_power_rec.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_sort_int_tab.c  my_square_root.c  my_str_to_wordtab.c  my_strcapitalize.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncmp.c  my_strncpy.c  my_strstr.c  (+2 more)
